# nano-agents

./: .env.example  README.md  main.py  pyproject.toml
nano_agents/: __init__.py
nano_agents/agents/: simple_agent.py
nano_agents/core/: agent.py  config.py  llm.py  message.py
nano_agents/tools/: base_tool.py  tool_manager.py
nano_agents/tools/builtin/: websearch.py
tests/: test_base_tool.py  test_llm.py  test_simple_agent.py  test_tool_manager.py
