[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nano-agents"
version = "0.1.0"
description = "学习Hello-agents开发的nano-agents框架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # 核心依赖
  "openai>=1.0.0,<2.0.0",
  "requests>=2.25.0,<3.0.0",
  "python-dotenv>=0.19.0,<2.0.0",
  "pydantic>=2.0.0,<3.0.0",
  # 基础工具库
  "beautifulsoup4>=4.9.0,<5.0.0",
  "numpy>=2.0.0,<3.0.0",
  "networkx>=2.6.0,<4.0.0",
  "tiktoken>=0.5.0",
  "pydantic-settings>=2.12.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["nano_agents*"]
exclude = ["tests*", "examples*", "docs*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
